--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "formik": "^2.4.5",
+    "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -29,6 +30,8 @@
     "install": "^0.13.0",
     "npm": "^10.5.2",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
